# bookstore

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_models/: test_order_model.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_product_models.py  test_product_serializer.py
product/tests/test_serializers/: test_category_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
